k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-82263855
  labels:
    app: app-82263855
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-82263855
  template:
    metadata:
      labels:
        app: app-82263855
    spec:
      containers:
      - name: app-container
        image: cepgbaseacr.azurecr.io/sampleapp1:82263855
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-data
          mountPath: /data
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: app-82263855-pvc
